--- a/src/styles.css
+++ b/src/styles.css
@@ -1,22 +1,34 @@
 body {
-    background-color: #ffffff;
-    color: rgb(0, 0, 0);
+    background-color: #f7f3f3;
+    color: rgb(0, 0, 0); /*muda a cor de todas as informações da view q não sejam as habilidades*/
   }
+
   .App {
-    font-family: sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+	  flex-direction: column;
+	  flex-wrap: nowrap;
+	  justify-content: center;
+	  align-items: center;
   }
+
   .App a {
     color: rgb(0, 0, 0);
   }
   
   input {
     background-color: #ffffff;
-    border: 1px solid #db0000;
+    border:3px solid #db0000;
     border-radius: 8px;
     padding: 5px 10px;
     color: rgb(0, 0, 0);
   }
-  input:focus {
+
+  .App h1 img {
+    width: 40px;
+  }
+  
+  /*input:focus {
     border-color: #db0000;
     outline: none;
-  }
+  }*/
