--- a/src/Pokemon/View/View.css
+++ b/src/Pokemon/View/View.css
@@ -1,32 +1,58 @@
 .PokemonView {
   display: flex;
 	flex-direction: column;
-	flex-wrap: nowrap;
+	flex-wrap: center;
 	justify-content: center;
 	align-items: center;
-
+  width: 100%;
 
   }
   .PokemonView h1 {
     font-weight: 300;
-    font-size: 33px; /*bulbasaur and grass*/
+    font-size: 33px;
   }
 
   .PokemonView h2 {
     margin-top: 150px;
     font-weight: 300;
-    font-size: 24px; /*bulbasaur and grass*/
+    font-size: 22px;
+    text-decoration: none;
+    color: #ffffff;
+    background-color: #000000;
+    border: 2px solid #000000;
+    display: flex;
+    padding: 10px;
+    border-radius: 10px;
+    transition: all 200ms;
+    
   }
 
   .PokemonView h3 {
     margin-top: 30px;
     font-weight: 300;
-    font-size: 24px; /*bulbasaur and grass*/
+    font-size: 22px;
+    text-decoration: none;
+    color: #ffffff;
+    background-color: #000000;
+    border: 2px solid #000000;
+    display: flex;
+    padding: 10px;
+    border-radius: 10px;
+    transition: all 200ms;
   }
 
   .PokemonView span {
     font-weight: 300;
-    font-size: 24px; /*bulbasaur and grass*/
+    font-size: 24px;
+    text-decoration: none;
+    color: #ffffff;
+    background-color: #ff0000;
+    border: 2px solid #ff0000;
+    display: flex;
+    padding: 10px;
+    border-radius: 10px;
+    transition: all 200ms;
+
   }
 
   .circle {
