--- a/src/styles.css
+++ b/src/styles.css
@@ -6,14 +6,17 @@ body {
   .App {
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
-	  flex-direction: column;
-	  flex-wrap: nowrap;
-	  justify-content: center;
-	  align-items: center;
+    flex-direction: column;
+    flex-wrap: center;
+    justify-content: center;
+    align-items: center;
+    width: 100%;  
   }
 
   .App a {
     color: rgb(0, 0, 0);
+    margin-left: 15px;
+    width: 100%;
   }
   
   input {
@@ -22,12 +25,14 @@ body {
     border-radius: 8px;
     padding: 5px 10px;
     color: rgb(0, 0, 0);
+    margin-top: 20px;
   }
 
   .App h1 img {
     width: 40px;
+    margin-top: 70px;
   }
-  
+
   /*input:focus {
     border-color: #db0000;
     outline: none;
